java change, and config add
change Oracle Java 8_241 to graalvm 19.3.2(Based on OpenJDK 11.0.7 LTS)